4.0.0 beta Improve IdAllocator Compatible Java25